--- a/AssStudentManager/web/css/styleindex.css
+++ b/AssStudentManager/web/css/styleindex.css
@@ -7,3 +7,68 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css
     Author     : ADMIN
 */
 
+#header {
+    display: flex;
+    background-color: #00bcd4;
+
+    height: 50px;
+    align-items: center;
+    justify-content: space-between;
+}
+html body {
+    margin: 0px;
+}
+#header .header_out {
+    display: flex;
+    
+}#header .header_out p {
+    padding-right: 100px;
+    font-size: 20px;
+    color: white;
+}
+
+#header .header_out a{
+    color: white;
+    text-decoration: none;
+    margin-right: 20px;
+    font-size: 20px;
+    padding-top: 20px;
+    
+}
+#header .header_center{
+    background: #029baf;
+    line-height: 2;
+}
+#header .header_center a{
+    color: white;
+    text-decoration: none;
+    font-size: 25px;
+    margin: 0 108px;
+}
+#slider{
+    display: flex;
+}
+#slider .subnav{
+    line-height: 70px;
+    margin: 0px;
+    background: rgba(33,29,29,0.97);
+    padding-bottom: 200px;
+    padding-right: 0px;
+    padding-left: 0px;
+    padding-top: 30px;
+}
+#slider .subnav li {
+    padding-right: 30px;
+}
+#slider .subnav li a {
+    text-decoration: none;
+    list-style: none;
+    color: white;
+    padding: 0 50px;
+}
+#slider .subnav li:hover,
+#slider  li:hover   {
+     color: black;
+     background-color: grey;
+ }
+
